--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://xumahub.com:3306/brasleverp?useSSL=false
+spring.datasource.url=jdbc:mysql://xumahub.com:3306/hackaton?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=as1234
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
